assets/css/output.css
/* ... */
.mr-2 {
  margin-right: 0.5rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mt-8 {
  margin-top: 2rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.-ml-1\.5 {
  margin-left: -0.375rem;
}

.-ml-1 {
  margin-left: -0.25rem;
}

.ml-5 {
  margin-left: 1.25rem;
}

.mb-12 {
  margin-bottom: 3rem;
}

.mb-3\.5 {
  margin-bottom: 0.875rem;
}

.ml-2\.5 {
  margin-left: 0.625rem;
}

.ml-2 {
  margin-left: 0.5rem;
}

.ml-auto {
  margin-left: auto;
}

.mt-3\.5 {
  margin-top: 0.875rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mr-px {
  margin-right: 1px;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.mt-16 {
  margin-top: 4rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.mt-10 {
  margin-top: 2.5rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mb-24 {
  margin-bottom: 6rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.ml-1 {
  margin-left: 0.25rem;
}

.mr-8 {
  margin-right: 2rem;
}

.mt-\[120px\] {
  margin-top: 120px;
}

.mb-8 {
  margin-bottom: 2rem;
}

.ml-3 {
  margin-left: 0.75rem;
}

.mb-20 {
  margin-bottom: 5rem;
}

.mt-auto {
  margin-top: auto;
}

.mt-14 {
  margin-top: 3.5rem;
}

.mb-9 {
  margin-bottom: 2.25rem;
}

.mr-4 {
  margin-right: 1rem;
}

.mb-1\.5 {
  margin-bottom: 0.375rem;
}

.ml-1\.5 {
  margin-left: 0.375rem;
}

.mb-2\.5 {
  margin-bottom: 0.625rem;
}

.mt-0 {
  margin-top: 0px;
}

.mr-1\.5 {
  margin-right: 0.375rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.table {
  display: table;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-0 {
  height: 0px;
}

.h-full {
  height: 100%;
}

.h-16 {
  height: 4rem;
}

.h-12 {
  height: 3rem;
}

.h-\[27rem\] {
  height: 27rem;
}

.h-9 {
  height: 2.25rem;
}

.h-2\.5 {
  height: 0.625rem;
}

.h-2 {
  height: 0.5rem;
}

.h-14 {
  height: 3.5rem;
}

.h-8 {
  height: 2rem;
}

.h-40 {
  height: 10rem;
}

.h-auto {
  height: auto;
}

.h-\[3\.125rem\] {
  height: 3.125rem;
}

.h-\[4rem\] {
  height: 4rem;
}

.h-10 {
  height: 2.5rem;
}

.h-20 {
  height: 5rem;
}

.h-5 {
  height: 1.25rem;
}

.h-fit {
  height: -moz-fit-content;
  height: fit-content;
}

.w-screen {
  width: 100vw;
}

.w-3\/5 {
  width: 60%;
}

.w-full {
  width: 100%;
}

.w-12 {
  width: 3rem;
}

.w-9 {
  width: 2.25rem;
}

.w-\[55\%\] {
  width: 55%;
}

.w-16 {
  width: 4rem;
}

.w-auto {
  width: auto;
}

.w-8 {
  width: 2rem;
}

.w-\[200px\] {
  width: 200px;
}

.w-\[295px\] {
  width: 295px;
}

.w-\[3\.125rem\] {
  width: 3.125rem;
}

.w-\[80\%\] {
  width: 80%;
}

.w-10 {
  width: 2.5rem;
}

.w-20 {
  width: 5rem;
}

.w-3\/4 {
  width: 75%;
}

.w-1\/5 {
  width: 20%;
}

.max-w-\[15rem\] {
  max-width: 15rem;
}

.max-w-\[515px\] {
  max-width: 515px;
}

.max-w-\[1800px\] {
  max-width: 1800px;
}

.grow {
  flex-grow: 1;
}

.basis-full {
  flex-basis: 100%;
}

.basis-1\/3 {
  flex-basis: 33.333333%;
}

.basis-\[80\%\] {
  flex-basis: 80%;
}

.basis-1\/4 {
  flex-basis: 25%;
}

.basis-1\/2 {
  flex-basis: 50%;
}

.table-auto {
  table-layout: auto;
}

.-translate-x-1\/2 {
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-y-1\/2 {
  --tw-translate-y: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.cursor-pointer {
  cursor: pointer;
}

.list-none {
  list-style-type: none;
}

.grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}

.grid-cols-4 {
  grid-template-columns: repeat(4, minmax(0, 1fr));
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-start {
  align-items: flex-start;
}

.items-center {
  align-items: center;
}

.justify-start {
  justify-content: flex-start;
}

.justify-end {
  justify-content: flex-end;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-5 {
  gap: 1.25rem;
}

.gap-8 {
  gap: 2rem;
}

.gap-x-6 {
  -moz-column-gap: 1.5rem;
       column-gap: 1.5rem;
}

.gap-y-10 {
  row-gap: 2.5rem;
}

.gap-x-8 {
  -moz-column-gap: 2rem;
       column-gap: 2rem;
}

.gap-y-8 {
  row-gap: 2rem;
}

.gap-x-5 {
  -moz-column-gap: 1.25rem;
       column-gap: 1.25rem;
}

.gap-x-14 {
  -moz-column-gap: 3.5rem;
       column-gap: 3.5rem;
}

.gap-x-1 {
  -moz-column-gap: 0.25rem;
       column-gap: 0.25rem;
}

.gap-y-1 {
  row-gap: 0.25rem;
}

.gap-x-3 {
  -moz-column-gap: 0.75rem;
       column-gap: 0.75rem;
}

.gap-y-2 {
  row-gap: 0.5rem;
}

.gap-y-5 {
  row-gap: 1.25rem;
}

.gap-x-4 {
  -moz-column-gap: 1rem;
       column-gap: 1rem;
}

.overflow-hidden {
  overflow: hidden;
}

.overflow-y-auto {
  overflow-y: auto;
}

.rounded {
  border-radius: 0.25rem;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-sm {
  border-radius: 0.125rem;
}

.rounded-md {
  border-radius: 0.375rem;
}

.rounded-\[0\.25rem\] {
  border-radius: 0.25rem;
}

.rounded-xl {
  border-radius: 0.75rem;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.rounded-\[4px\] {
  border-radius: 4px;
}

.rounded-t {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.rounded-b {
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.rounded-t-none {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.rounded-b-xl {
  border-bottom-right-radius: 0.75rem;
  border-bottom-left-radius: 0.75rem;
}

.rounded-b-md {
  border-bottom-right-radius: 0.375rem;
  border-bottom-left-radius: 0.375rem;
}

.rounded-t-md {
  border-top-left-radius: 0.375rem;
  border-top-right-radius: 0.375rem;
}

.rounded-tl-none {
  border-top-left-radius: 0px;
}

.rounded-bl-none {
  border-bottom-left-radius: 0px;
}
/* ... */

